<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/nombre"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/nombre"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext"/>

            <EditText
                android:id="@+id/apellidos"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:hint="@string/apellidos"
                android:padding="8dp" />
            <EditText
                android:id="@+id/Dni"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/dni"
                android:drawablePadding="8dp"
                android:hint="@string/DNI"
                android:padding="8dp" />
            <EditText
                android:id="@+id/fecha"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/calendario"
                android:drawablePadding="8dp"
                android:hint="@string/nacimiento"
                android:padding="8dp" />
            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/guard"
                android:textSize="18sp"
                android:text="@string/atras"
                app:cornerRadius = "30dp"/>



        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>