<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/altura"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:hint="@string/altura"
                android:padding="8dp" />

            <EditText
                android:id="@+id/peso"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/kilos"
                android:drawablePadding="8dp"
                android:hint="@string/peso"
                android:padding="8dp" />
            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/btnguar"
                android:textSize="18sp"
                android:text="@string/guardar"
                app:cornerRadius = "30dp"/>



        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>