<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/correo"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/mail"
                android:inputType="textEmailAddress"
                android:drawablePadding="8dp"
                android:hint="@string/correo"
                android:padding="8dp" />

            <EditText
                android:id="@+id/contra"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/candado"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:hint="@string/contraseña"
                android:padding="8dp" />

            <EditText
                android:id="@+id/contra2"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/candado"
                android:drawablePadding="8dp"
                android:hint="@string/contra2"
                android:padding="8dp" />



        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>