<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:orientation="vertical">
           <TextView
               android:id="@+id/textViewEspacio1"
               android:layout_width="match_parent"
               android:layout_height="5dp" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:orientation="horizontal">
               <TextView
                   android:id="@+id/textViewEspacio2"
                   android:layout_width="wrap_content"
                   android:layout_height="200dp"
                   android:layout_weight="1" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="190dp"
                   android:orientation="vertical">
                   <TextView
                       android:id="@+id/textViewEspacio3"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />
                   <ImageView
                       android:id="@+id/logo"
                       android:layout_width="match_parent"
                       android:layout_height="135dp"
                       app:srcCompat="@drawable/logo" />
               </LinearLayout>

               <TextView
                   android:id="@+id/textViewEspacio4"
                   android:layout_width="wrap_content"
                   android:layout_height="200dp"
                   android:layout_weight="1" />

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="700dp"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="415dp"
               android:layout_height="736dp"
               android:layout_weight="1"
               android:orientation="vertical"
               android:padding="20dp">
               <TextView
                   android:id="@+id/textViewEspacioRegistro"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/registro"
                   android:textAlignment="center"
                   android:textSize="24sp"
                   android:textStyle="bold" />
               <TextView
                   android:id="@+id/textViewEspacio5"
                   android:layout_width="match_parent"
                   android:layout_height="14dp" />

               <EditText
                   android:id="@+id/Telefono"
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:ems="10"
                   android:maxLength="9"
                   android:hint="@string/telefono"
                   android:inputType="phone"
                   android:paddingLeft="20sp"
                   android:textColor="#6E7692"
                   android:textColorHint="#6E7692"
                   android:textSize="22sp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="14dp" />

               <EditText
                   android:id="@+id/Correo"
                   android:layout_width="match_parent"
                   android:layout_height="48dp"

                   android:ems="10"
                   android:hint="@string/correo"
                   android:inputType="textEmailAddress"
                   android:paddingLeft="20sp"
                   android:textColor="#6E7692"
                   android:textColorHint="#6E7692"
                   android:textSize="22sp" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="14dp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="14dp" />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <EditText
                       android:id="@+id/Altura"
                       android:layout_width="271dp"
                       android:layout_height="match_parent"
                       android:ems="10"
                       android:hint="@string/altura"
                       android:inputType="number"
                       android:paddingLeft="20sp"
                       android:textColor="#6E7692"
                       android:textColorHint="#6E7692"
                       android:textSize="22sp" />
                   <TextView
                       android:id="@+id/textViewAl"
                       android:layout_width="97dp"
                       android:layout_height="48dp"
                       android:text="CM"
                       android:textSize="22sp"/>
               </LinearLayout>
               <TextView
                   android:id="@+id/textViewCM"
                   android:layout_width="match_parent"
                   android:layout_height="14dp" />

               <LinearLayout
                   android:layout_width="361dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <EditText
                       android:id="@+id/Peso"
                       android:layout_width="284dp"
                       android:layout_height="48dp"
                       android:ems="10"
                       android:hint="@string/peso"
                       android:inputType="number"
                       android:paddingLeft="20sp"
                       android:textColor="#6E7692"
                       android:textColorHint="#6E7692"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/textViewKG"
                       android:layout_width="97dp"
                       android:layout_height="48dp"
                       android:text="KG"
                       android:textSize="22sp"/>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="392dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <Button
                       android:id="@+id/buttonVolver"
                       android:layout_width="140dp"
                       android:layout_height="wrap_content"
                       android:text="@string/atras"
                       android:layout_marginRight="70dp"/>

                   <Button
                       android:id="@+id/buttonGuardar"
                       android:layout_width="163dp"
                       android:layout_height="wrap_content"
                       android:text="@string/guardar" />
               </LinearLayout>


           </LinearLayout>


       </LinearLayout>

   </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>